--- a/package.json
+++ b/package.json
@@ -18,7 +18,23 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "ng5-slider": "^1.2.6",
+    "ngx-bar-rating": "^2.0.0",
+    "ngx-image-zoom": "^0.6.0",
+    "ngx-infinite-scroll": "^10.0.1",
+    "ngx-slick-carousel": "^0.5.1",
+    "ngx-toastr": "^14.2.1",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
+    "smartmenus": "^1.1.1",
+    "themify-icons": "^1.0.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -26,6 +42,7 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
+    "@angular/localize": "^12.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
