--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/compiler-cli": "~12.0.1",
     "@angular/localize": "^12.0.5",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
